--- a/Submitted_PRSA/mybib.bib
+++ b/Submitted_PRSA/mybib.bib
@@ -40,6 +40,36 @@ pages = {5365-5379},
 year = {1992}
 }
 
+@article{Nakayama2021GRL,
+  title={Impact of subglacial freshwater discharge on Pine Island Ice Shelf},
+  author={Nakayama, Yoshihiro and Cai, Cilan and Seroussi, Helene},
+  journal={Geophysical Research Letters},
+  volume={48},
+  number={18},
+  pages={e2021GL093923},
+  year={2021},
+}
+
+@article{Wells2005GAF,
+  title={Two-dimensional density currents in a confined basin},
+  author={Wells, M G and Wettlaufer, J S},
+  journal={Geophys. Astrophys. Fluid Dyn.},
+  volume={99},
+  number={3},
+  pages={199--218},
+  year={2005}
+  }
+
+@article{Seroussi2018Cryo,
+  title={Representation of basal melting at the grounding line in ice flow models},
+  author={Seroussi, H  and Morlighem, M},
+  journal={Cryosphere},
+  volume={12},
+  number={10},
+  pages={3085--3096},
+  year={2018},
+}
+
 @article{Gudmundsson2019GRL,
   title={Instantaneous Antarctic ice sheet mass loss driven by thinning ice shelves},
   author={Gudmundsson, G H and Paolo, F S and Adusumilli, S and Fricker, H A},
@@ -104,7 +134,7 @@ year = {1991}
 @article{Lazeroms2018TheCryo,
   title={Modelling present-day basal melt rates for Antarctic ice shelves using a parametrization of buoyant meltwater plumes},
   author={Lazeroms, W M J and Jenkins, A and Gudmundsson, H and van de Wal, R S W},
-  journal={The Cryosphere},
+  journal={Cryosphere},
   volume={12},
   number={1},
   pages={49--70},
@@ -207,7 +237,7 @@ year = {2014}
 
 @misc{PycnoclineCode,
   title = {Subglacial Plume Modelling Code},
-  howpublished = {\url{https://github.com/alextbradley/Pycnocline_modelling}},
+  howpublished = {\url{https://github.com/alextbradley/pycnocline_modelling}},
   author = {Bradley, A. T.},
   year = {2021}
 }
@@ -262,7 +292,7 @@ journal = {J. Hydraul. Div.}
 @article{Mouginot2014GRL,
   title={Sustained increase in ice discharge from the Amundsen Sea Embayment, West Antarctica, from 1973 to 2013},
   author={Mouginot, J and Rignot, E and Scheuchl, B},
-  journal={Geophysical Research Letters},
+  journal={Geophys. Res. Lett.},
   volume={41},
   number={5},
   pages={1576--1584},
@@ -322,7 +352,7 @@ pages = {},
 @article{Gudmundsson2013Cryo,
   title={Ice-shelf buttressing and the stability of marine ice sheets},
   author={Gudmundsson, H.},
-  journal={The Cryosphere},
+  journal={Cryosphere},
   volume={7},
   number={2},
   pages={647--655},
@@ -372,7 +402,7 @@ pages = {},
 @Article{Reese2018Cryo,
 AUTHOR = {Reese, R. and Albrecht, T. and Mengel, M. and Asay-Davis, X. and Winkelmann, R.},
 TITLE = {Antarctic sub-shelf melt rates via PICO},
-JOURNAL = {The Cryosphere},
+JOURNAL = {Cryosphere},
 VOLUME = {12},
 YEAR = {2018},
 NUMBER = {6},
@@ -382,7 +412,7 @@ PAGES = {1969--1985}
  @article{ReesJones2018Cryo,
   title={Frazil-ice growth rate and dynamics in mixed layers and sub-ice-shelf plumes},
   author={Rees Jones, D W and Wells, A J},
-  journal={The Cryosphere},
+  journal={Cryosphere},
   volume={12},
   number={1},
   pages={25--38},
@@ -524,7 +554,7 @@ year = {1987}
 @Article{Cornford2015Cryo,
 AUTHOR = {Cornford, S. L. and Martin, D. F. and Payne, A. J. and Ng, E. G. and Le Brocq, A. M. and Gladstone, R. M. and Edwards, T. L. and Shannon, S. R. and Agosta, C. and van den Broeke, M. R. and Hellmer, H. H. and Krinner, G. and Ligtenberg, S. R. M. and Timmermann, R. and Vaughan, D. G.},
 TITLE = {Century-scale simulations of the response of the West Antarctic Ice Sheet to a warming climate},
-JOURNAL = {The Cryosphere},
+JOURNAL = {Cryosphere},
 VOLUME = {9},
 YEAR = {2015},
 NUMBER = {4},
@@ -534,7 +564,7 @@ PAGES = {1579--1600}
 @Article{Seroussi2014Cryo,
 AUTHOR = {Seroussi, H. and Morlighem, M. and Rignot, E. and Mouginot, J. and Larour, E. and Schodlok, M. and Khazendar, A.},
 TITLE = {Sensitivity of the dynamics of Pine Island Glacier, West Antarctica, to climate forcing for the next 50 years},
-JOURNAL = {The Cryosphere},
+JOURNAL = {Cryosphere},
 VOLUME = {8},
 YEAR = {2014},
 NUMBER = {5},
@@ -576,7 +606,7 @@ PAGES = {1699--1710}
 AUTHOR = {Favier, L. and Pattyn, F. and Berger, S. and Drews, R.},
 TITLE = {Dynamic influence of pinning points on marine ice-sheet
 stability: a numerical study in Dronning Maud Land, East Antarctica},
-JOURNAL = {The Cryosphere},
+JOURNAL = {Cryosphere},
 VOLUME = {10},
 YEAR = {2016},
 NUMBER = {6},
@@ -684,10 +714,40 @@ year = {2012}
 @article{Straneo2011NatureGeo,
   title={Impact of fjord dynamics and glacial runoff on the circulation near Helheim Glacier},
   author={Straneo, F. and Curry, R. G. and Sutherland, D. A. and Hamilton, G. S. and Cenedese, C. and V{\aa}ge, K. and Stearns, L. A.},
-  journal={Nature Geoscience},
+  journal={Nat. Geosci.},
   volume={4},
   number={5},
   pages={322--327},
   year={2011},
   publisher={Nature Publishing Group}
+}
+
+@article{Rignot2011GRL,
+  title={Antarctic grounding line mapping from differential satellite radar interferometry},
+  author={Rignot, Eric and Mouginot, Jeremie and Scheuchl, B},
+  journal={Geophys. Res. Lett.},
+  volume={38},
+  number={10},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{Jenkins2010JPO,
+  title={Observation and parameterization of ablation at the base of Ronne Ice Shelf, Antarctica},
+  author={Jenkins, Adrian and Nicholls, Keith W and Corr, Hugh FJ},
+  journal={J. Phys. Oceanog.},
+  volume={40},
+  number={10},
+  pages={2298--2312},
+  year={2010}
+}
+
+@article{Petty2013JPO,
+  title={Impact of atmospheric forcing on Antarctic continental shelf water masses},
+  author={Petty, A A and Feltham, D L and Holland, P R},
+  journal={J. Phys. Oceanogr.},
+  volume={43},
+  number={5},
+  pages={920--940},
+  year={2013}
 }
